--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
-    background-color: #0F0F0F;
+    background-color: #331D62;
     font-family: sans-serif;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    -webkit-touch-callout: none; 
-    -webkit-user-select: none; 
-    -khtml-user-select: none; 
-    -moz-user-select: none; 
-    -ms-user-select: none; 
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
@@ -61,12 +62,14 @@ p {
     background-clip: text;
     -webkit-background-clip: text;
     animation: animate 10s linear infinite;
+    translate: 0 100px;
 }
 
 @keyframes animate {
     0% {
         background-position: 0%;
     }
+
     100% {
         background-position: 300%;
     }
@@ -96,7 +99,8 @@ p {
 
 .title {
     font-size: 70px;
-    font-family: Pacifico;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-transform: uppercase;
 }
 
 .canvas-container {
@@ -116,7 +120,7 @@ p {
     .counter {
         font-size: 64px;
     }
-    
+
     .under-text {
         font-size: 16px;
     }
@@ -143,7 +147,7 @@ p {
     .counter {
         font-size: 24px;
     }
-    
+
     .under-text {
         font-size: 10px;
     }
